--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   />
 
   <!-- Load the required dependencies: A-frame and AR.js -->
-  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+  <script src="./aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
   <script src="./script.js"></script>
   <link rel="stylesheet" href="style.css" />
@@ -22,8 +22,8 @@
   <script>
     window.onload = function () {
       setTimeout(function () {
-        var resizeEvent = window.document.createEvent("UIEvents");
-        resizeEvent.initUIEvent("resize", true, false, window, 0);
+        var resizeEvent = window.document.createEvent('UIEvents');
+        resizeEvent.initUIEvent('resize', true, false, window, 0);
         window.dispatchEvent(resizeEvent);
       }, 3000);
     };
@@ -33,86 +33,39 @@
 <body>
   <!-- a-scene defines the scene that we are agoing to use. After arjs= there are various options that can be customized  -->
   <!-- depending on your needs. For now just stick with these ones -->
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+  <a-scene
+    embedded
+    arjs="sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+  >
     <!-- Defines the marker that we are going to use. Notice that we are not providing the image file, but the  -->
     <!-- "compiled" .patt file that we got from the online tool. the marker MUST BE ACCESSIBLE VIA HTTPS -->
-    <a-marker
-      preset="custom"
-      type="pattern"
-      url="https://dl.dropboxusercontent.com/s/seoqncn2784qewt/pattern-A.patt"
-    >
-      <!-- Here we define the content to show on the marker when it gets detected -->
+    <a-marker type="barcode" value="1">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
       <a-entity
-        text="value: A steht für; color: #BBB"
+        text="value: 1; color: #BBB"
         position="5 0.2 0"
         scale="10 10 10"
         rotation="-90 0 0"
       ></a-entity>
-      <a-image
-        id="img1"
-        position="0 0 0"
-        rotation="90 180 0"
-        width=""
-        height=""
-        opacity="1"
-        src="./assets/buch.jpg"
-        transparent="true"
-        alpha-test="0.2"
-        shader="standard"
-        scale="1 1 1"
-        visible=""
-        material=""
-        geometry=""
-        scale-on-mouseenter
-      ></a-image>
-      <a-image
-        id="img2"
-        position="0 0.2 0"
-        rotation="270 0 0"
-        width=""
-        height=""
-        opacity="1"
-        src="./assets/pic2.png"
-        transparent="true"
-        alpha-test="0.2"
-        shader="standard"
-        scale="1 1 1"
-        visible=""
-        material=""
-        geometry=""
-        animation="property: object3D.position.y; to: 0.7; dir: alternate; dur: 2000; loop: true"
-      >
-      </a-image>
-      <a-image
-        id="img3"
-        position="0 0.4 0"
-        rotation="270 0 0"
-        width=""
-        height=""
-        opacity="1"
-        src="./assets/pic3.png"
-        transparent="true"
-        alpha-test="0.2"
-        shader="standard"
-        scale="1 1 1"
-        visible=""
-        material=""
-        geometry=""
-      ></a-image>
     </a-marker>
-    <a-marker
-      preset="custom"
-      type="pattern"
-      url="https://dl.dropboxusercontent.com/s/00gaantusvk0496/pattern-B.patt?dl=0"
-    >
-      <!-- Here we define the content to show on the marker when it gets detected -->
+    <a-marker type="barcode" value="2">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
       <a-entity
-        text="value: B steht für; color: #BBB"
+        text="value: 2; color: #BBB"
         position="5 0.2 0"
         scale="10 10 10"
         rotation="-90 0 0"
       ></a-entity>
-      ^
+    </a-marker>
+    <!-- fancy marker -->
+    <a-marker preset="custom" type="barcode" value="2">
+      <!-- Here we define the content to show on the marker when it gets detected -->
+      <a-entity
+        text="value: 2; color: #BBB"
+        position="5 0.2 0"
+        scale="10 10 10"
+        rotation="-90 0 0"
+      ></a-entity>
       <a-image
         id="img1"
         position="0 0 0"
@@ -165,185 +118,77 @@
         geometry=""
       ></a-image>
     </a-marker>
-    <a-marker
-      preset="custom"
-      type="pattern"
-      url="https://dl.dropboxusercontent.com/s/a7lpw8tntafkvvq/pattern-C.patt"
-    >
-      <!-- Here we define the content to show on the marker when it gets detected -->
+    <a-marker type="barcode" value="3">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
       <a-entity
-        text="value: C steht für; color: #BBB"
+        text="value: 3; color: #BBB"
         position="5 0.2 0"
         scale="10 10 10"
         rotation="-90 0 0"
       ></a-entity>
-      ^
-      <a-image
-        id="img1"
-        position="0 0 0"
-        rotation="90 180 0"
-        width=""
-        height=""
-        opacity="1"
-        src="./assets/buch.jpg"
-        transparent="true"
-        alpha-test="0.2"
-        shader="standard"
-        scale="1 1 1"
-        visible=""
-        material=""
-        geometry=""
-      ></a-image>
-      <a-image
-        id="img2"
-        position="0 0.2 0"
-        rotation="270 0 0"
-        width=""
-        height=""
-        opacity="1"
-        src="./assets/pic2.png"
-        transparent="true"
-        alpha-test="0.2"
-        shader="standard"
-        scale="1 1 1"
-        visible=""
-        material=""
-        geometry=""
-        animation="property: object3D.position.y; to: 0.7; dir: alternate; dur: 2000; loop: true"
-      >
-      </a-image>
-
-      <a-image
-        id="img3"
-        position="0 0.4 0"
-        rotation="270 0 0"
-        width=""
-        height=""
-        opacity="1"
-        src="./assets/pic3.png"
-        transparent="true"
-        alpha-test="0.2"
-        shader="standard"
-        scale="1 1 1"
-        visible=""
-        material=""
-        geometry=""
-      ></a-image>
     </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/1zazkj5nbwr9exx/pattern-D.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: D steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
+    <a-marker type="barcode" value="4">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
+      <a-entity
+        text="value: 4; color: #BBB"
+        position="5 0.2 0"
+        scale="10 10 10"
+        rotation="-90 0 0"
+      ></a-entity>
     </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/vjtjjj9fjq5amu3/pattern-E.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: E steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
+    <a-marker type="barcode" value="5">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
+      <a-entity
+        text="value: 5; color: #BBB"
+        position="5 0.2 0"
+        scale="10 10 10"
+        rotation="-90 0 0"
+      ></a-entity>
     </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/ajh1bla2jx7r844/pattern-F.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: F steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
+    <a-marker type="barcode" value="6">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
+      <a-entity
+        text="value: 6; color: #BBB"
+        position="5 0.2 0"
+        scale="10 10 10"
+        rotation="-90 0 0"
+      ></a-entity>
     </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/rtimr2ge4fzvbtf/pattern-G.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: G steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
+    <a-marker type="barcode" value="7">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
+      <a-entity
+        text="value: 7; color: #BBB"
+        position="5 0.2 0"
+        scale="10 10 10"
+        rotation="-90 0 0"
+      ></a-entity>
     </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/tntpz449jit4hwl/pattern-H.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: H steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
+    <a-marker type="barcode" value="8">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
+      <a-entity
+        text="value: 8; color: #BBB"
+        position="5 0.2 0"
+        scale="10 10 10"
+        rotation="-90 0 0"
+      ></a-entity>
     </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/jr9g7a6dyabedsy/pattern-i.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: I steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
+    <a-marker type="barcode" value="9">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
+      <a-entity
+        text="value: 9; color: #BBB"
+        position="5 0.2 0"
+        scale="10 10 10"
+        rotation="-90 0 0"
+      ></a-entity>
     </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/ijo0abo0wm9ov1a/pattern-J.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: J steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/5tyq55fqe11fyux/pattern-K.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: K steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/9eruaqprgnp559z/pattern-L.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: L steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/b54heywd5nhy6ui/pattern-m.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: M steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/kdjoyigm7nqi2ey/pattern-n.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: N steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/3igdqrem8246uzb/pattern-o.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: O steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/i264skv95uca15x/pattern-P.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: P steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/eenj3tr1bqsydmg/pattern-q.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: Q steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/nwoffqvl3r0rnx6/pattern-R.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: R steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/dchbsviu4prxqw8/pattern-s.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: S steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/q5p8j57acox8eke/pattern-t.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: T steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/fcnzix9d1voetwy/pattern-U.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: U steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/k0f2hhmcekxf0jq/pattern-v.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: V steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/b6ck5m2ijsseehy/pattern-w.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: W steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/1ryoejup82t10q0/pattern-x.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: X steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/arqgq2uxj88zab5/pattern-y.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: Y steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
-    </a-marker>
-    <a-marker preset="custom" type="pattern" url="https://dl.dropboxusercontent.com/s/kpr3ckgy1wvk4c7/pattern-z.patt">
-      <!-- Here we define the content to show on the marker when it gets detected -->
-      <a-entity text="value: Z steht für; color: #BBB" position="5 0.2 0" scale="10 10 10" rotation="-90 0 0">
-      </a-entity>
+    <a-marker type="barcode" value="10">
+      <a-box position="0 0.5 0" color="yellow"></a-box>
+      <a-entity
+        text="value: 10; color: #BBB"
+        position="5 0.2 0"
+        scale="10 10 10"
+        rotation="-90 0 0"
+      ></a-entity>
     </a-marker>
     <!-- Define the camera of the scene -->
     <a-entity camera> </a-entity>
