--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       ></a-entity>
     </a-marker>
     <a-marker type="barcode" value="2">
+      <a-box color="blue" depth=".5" height=".5" width=".5"></a-box>
       <a-entity
         text="value: 2; color: #BBB"
         position="5 0.2 0"
@@ -91,7 +92,7 @@
       ></a-entity>
     </a-marker>
     <a-marker type="barcode" value="4">
-      <a-box color="tomato" depth="2" height="4" width="0.5"></a-box>
+      <a-box color="#44444a" depth=".5" height=".5" width=".5"></a-box>
       <a-entity
         text="value: 4; color: #BBB"
         position="5 0.2 0"
@@ -100,7 +101,9 @@
       ></a-entity>
     </a-marker>
     <a-marker type="barcode" value="5">
-      <a-box color="tomato" depth="2" height="4" width="0.5"></a-box>
+      <a-sphere color="blue" radius=".3" position=".03 0.2 0"></a-sphere>
+      <a-sphere color="green" radius=".2" position="-.03 0.4 0"></a-sphere>
+
       <a-entity
         text="value: 5; color: #BBB"
         position="5 0.2 0"
@@ -109,7 +112,7 @@
       ></a-entity>
     </a-marker>
     <a-marker type="barcode" value="6">
-      <a-box color="tomato" depth="2" height="4" width="0.5"></a-box>
+      <a-box color="tomato" depth="1" height="1" width="1"></a-box>
       <a-entity
         text="value: 6; color: #BBB"
         position="5 0.2 0"
