--- a/index.html
+++ b/index.html
@@ -39,10 +39,24 @@
   </script>
 </head>
 
+<!-- fire function when marker is detected -->
+<script>
+  AFRAME.registerComponent('markerhandler', {
+    init: function () {
+      this.el.sceneEl.addEventListener('markerFound', (e) => {
+        // redirect to custom URL e.g. google.com
+        setTimeout(function () {
+          //console.log(e.target.classList);
+          document.querySelector('.output-log').innerHTML = e.target.classList;
+        }, 1000);
+      });
+    },
+  });
+</script>
+
 <body>
-  <div class="buttons">
-    <button class="say-hi-button">hi</button>
-  </div>
+  <span class="output-log"></span>
+  <div class="buttons"></div>
   <!-- a-scene defines the scene that we are agoing to use. After arjs= there are various options that can be customized  -->
   <!-- depending on your needs. For now just stick with these ones -->
   <a-scene
@@ -55,7 +69,7 @@
     </a-assets>
     <!-- Defines the marker that we are going to use. Notice that we are not providing the image file, but the  -->
     <!-- "compiled" .patt file that we got from the online tool. the marker MUST BE ACCESSIBLE VIA HTTPS -->
-    <a-marker type="barcode" value="0">
+    <a-marker markerhandler type="barcode" value="0" class="ein-baum">
       <a-gltf-model src="#tree"></a-gltf-model>
       <a-entity
         text="value: 0; color: #BBB"
@@ -64,7 +78,7 @@
         rotation="-90 0 0"
       ></a-entity>
     </a-marker>
-    <a-marker type="barcode" value="1">
+    <a-marker markerhandler type="barcode" value="1" class="marker-zwo">
       <a-box color="tomato" depth="2" height="2" width="2"></a-box>
       <a-entity
         text="value: 1; color: #BBB"
@@ -73,15 +87,10 @@
         rotation="-90 0 0"
       ></a-entity>
     </a-marker>
-    <a-marker type="barcode" value="2">
-      <a-box color="blue" depth=".5" height=".5" width=".5"></a-box>
-      <a-entity
-        text="value: 2; color: #BBB"
-        position="5 0.2 0"
-        scale="10 10 10"
-        rotation="-90 0 0"
-      ></a-entity>
+    <a-marker markerhandler type="barcode" value="2" class="dreiecke-überall">
+      <a-tetrahedron color="#FF926B" radius="5"></a-tetrahedron>
     </a-marker>
+    <!--
     <a-marker type="barcode" value="3">
       <a-gltf-model src="#houses"></a-gltf-model>
       <a-entity
@@ -120,7 +129,7 @@
         rotation="-90 0 0"
       ></a-entity>
     </a-marker>
-    <!-- Define the camera of the scene -->
+    Define the camera of the scene -->
     <a-entity camera> </a-entity>
   </a-scene>
 </body>
