Add bg img + font

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <h1>Cassiopeia Saga</h1>
 
+
+<body>
+    <div class="banner-img"></div>
+    <h1>Cassiopeia Saga</h1>
     <p>
         ich bin dein Begleiter in unsere parallelen Geschichten.
     </p>
+    <span class="output-log"></span>
+
     <footer>
         <button class="camera-toggle-button" onclick="addScene()">
             <p>
