Fix typo & center demo text

--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Hello!</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="./loadScene.js"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-
-
-<body>
+  <body>
     <div class="banner-img"></div>
     <h1>Cassiopeia Saga</h1>
     <p>
-        ich bin dein Begleiter in unsere parallelen Geschichten.
+      ich bin dein Begleiter in unsere parallelen Geschichten. Lorem ipsum dolor
+      sit amet consectetur, adipisicing elit. Optio modi commodi sapiente
+      obcaecati deserunt perferendis ipsa beatae minima repellat quisquam.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam quod
+      explicabo voluptatem voluptatum molestias tenetur iste qui, facere nostrum
+      ipsum nulla inventore ex neque laudantium omnis sapiente nihil nam vero
+      voluptas? Adipisci error eos, sapiente ipsum odio laborum. Facilis aut
+      eos, magni sit officia recusandae?
     </p>
     <span class="output-log"></span>
 
     <footer>
-        <button class="camera-toggle-button" onclick="addScene()">
-            <p>
-                Hinweise suchen
-            </p>
-        </button>
+      <button class="camera-toggle-button" onclick="addScene()">
+        <p>Hinweise suchen</p>
+      </button>
     </footer>
-
-</body>
-
+  </body>
 </html>
